--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
         <version>5.3.2</version>
     </dependency>
 
+    <dependency>
+        <groupId>com.aventstack</groupId>
+        <artifactId>extentreports</artifactId>
+        <version>5.0.9</version>
+    </dependency>
+
 </dependencies>
+
 
 </project>
